calico-policies/private-network-isolation/calico-v3/us-east/allow-private-service-endpoint.yaml
# This policy allows outgoing network traffic from worker nodes in each zone
# of your cluster to the cluster master through the private service endpoint.
# Note that you must allow outgoing traffic for all of the zones within the region.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-private-service-endpoint
spec:
  egress:
  - action: Allow
    destination:
      nets:
      # Nets for US East: mon01, tor01, tor04, tor05, wdc04, wdc06, wdc07
      - 166.9.20.11/32
      - 166.9.20.12/32
      - 166.9.20.13/32
      - 166.9.20.38/32
      - 166.9.20.80/32
      - 166.9.20.116/32
      - 166.9.20.117/32
      - 166.9.20.187/32
      - 166.9.22.8/32
      - 166.9.22.9/32
      - 166.9.22.10/32
      - 166.9.22.26/32
      - 166.9.22.43/32
      - 166.9.22.52/32
      - 166.9.22.54/32
      - 166.9.22.109/32
      - 166.9.24.19/32
      - 166.9.24.22/32
      - 166.9.24.35/32
      - 166.9.24.4/32
      - 166.9.24.46/32
      - 166.9.24.47/32
      - 166.9.24.5/32
      - 166.9.24.90/32
      - 166.9.76.8/32
      - 166.9.76.6/32
      - 166.9.77.6/32
      - 166.9.77.8/32
      - 166.9.78.6/32
      - 166.9.78.8/32
      ports:
      - 20000:32767
      - 443
    protocol: UDP
    source: {}
  - action: Allow
    destination:
      nets:
      # Nets for US East: mon01, tor01, tor04, tor05, wdc04, wdc06, wdc07
      - 166.9.20.11/32
      - 166.9.20.12/32
      - 166.9.20.13/32
      - 166.9.20.38/32
      - 166.9.20.80/32
      - 166.9.20.116/32
      - 166.9.20.117/32
      - 166.9.20.187/32
      - 166.9.22.8/32
      - 166.9.22.9/32
      - 166.9.22.10/32
      - 166.9.22.26/32
      - 166.9.22.43/32
      - 166.9.22.52/32
      - 166.9.22.54/32
      - 166.9.22.109/32
      - 166.9.24.19/32
      - 166.9.24.22/32
      - 166.9.24.35/32
      - 166.9.24.4/32
      - 166.9.24.46/32
      - 166.9.24.47/32
      - 166.9.24.5/32
      - 166.9.24.90/32
      - 166.9.76.8/32
      - 166.9.76.6/32
      - 166.9.77.6/32
      - 166.9.77.8/32
      - 166.9.78.6/32
      - 166.9.78.8/32
      ports:
      - 20000:32767
      - 443
    protocol: TCP
    source: {}
  order: 1900
  selector: ibm.role == 'worker_private'
  types:
  - Egress
