calico-policies/private-network-isolation/calico-v3/us-east/allow-private-services-pods.yaml
# This policy allows outgoing network traffic from pods to other
# IBM Cloud services that support private service endpoints.
# The example nets in this policy are for IBM Cloud Container Registry
# and IBM Cloud Monitoring with Sysdig.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-private-services-pods
spec:
  egress:
  - action: Allow
    destination:
      nets:
      # IBM Cloud Container Registry: Global registry
      - 166.9.20.31/32
      - 166.9.22.22/32
      - 166.9.24.16/32
      # IBM Cloud Container Registry: US South & US East nets for your own registry
      - 166.9.12.227/32
      - 166.9.15.116/32
      - 166.9.16.244/32
      ports:
      - 443
      - 4443
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Cloud Monitoring with Sysdig: US East nets
      - 166.9.20.53/32
      - 166.9.22.50/32
      - 166.9.24.43/32
      ports:
      - 6443
    protocol: TCP
    source: {}
  order: 1900
  selector: projectcalico.org/orchestrator == 'k8s'
  types:
  - Egress
